# modelmesh-runtime-adapter

./: Dockerfile  Dockerfile.konflux  Makefile  OWNERS  README.md  go.mod  go.sum  requirements-build.in  requirements-build.txt  requirements.in  requirements.txt  rpms.in.yaml  rpms.lock.yaml  ubi.repo  version
.github/: renovate.json
.github/workflows/: create-tag-release.yml
.tekton/: ad-b1-pull-request.yaml  ad-b1-push.yaml  modelmesh-runtime-adapter-b1-pull-request.yaml  modelmesh-runtime-adapter-b1-push.yaml  odh-modelmesh-runtime-adapter-push.yaml  odh-modelmesh-runtime-adapter-v2-16-pull-request.yaml  odh-modelmesh-runtime-adapter-v2-16-push.yaml  odh-modelmesh-runtime-adapter-v2-19-push.yaml
internal/envconfig/: envconfig.go
internal/proto/kfserving-predict-v2/: inference.pb.go
internal/proto/mlserver/dataplane/: dataplane.pb.go
internal/proto/triton/: model_config.pb.go  triton.pb.go
konflux-files/: README.md  pyproject.toml  requirements.txt
model-mesh-ovms-adapter/server/: config.go  modelconfig.go  modelmanager.go  server.go
model-mesh-torchserve-adapter/: .gitignore
model-mesh-torchserve-adapter/server/: config.go
