[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Spolti <fspolti@redhat.com>"]
readme = "README.md"
 
[tool.poetry.dependencies]
python = ">=3.8,<3.12"
grpcio = "1.65.5"
h5py = "3.10.0"
tensorflow = "2.13.1"
docutils = "0.20.1"
tensorflow-io-gcs-filesystem = "0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"